# augv_ws

./: .gitignore
src/ackerman_regulator/: CMakeLists.txt
src/ackerman_regulator/src/: ackerman_regulator.cpp
src/algorithms/ackerman_regulator/: CMakeLists.txt
src/algorithms/ackerman_regulator/src/: ackerman_regulator.cpp
src/algorithms/augv_regulators/: CMakeLists.txt  package.xml
src/algorithms/augv_regulators/src/: ackerman_regulator.cpp  omni_regulator.cpp  tracked_regulator.cpp
src/algorithms/autopilot_lite/: package.xml  setup.cfg  setup.py
src/algorithms/autopilot_lite/autopilot_lite/: autopilot.py
src/algorithms/move_commander/: package.xml  setup.cfg  setup.py
src/algorithms/move_commander/move_commander/: commander.py
src/algorithms/planners/astar_planner/: package.xml
src/algorithms/planners/astar_planner/astar_planner/: adequate_astar.py  astar_client.py  astar_planner_ros_server.py  helper_functions.py  path_filter.py
src/algorithms/planners/astar_planner/deprecated/: astar.py  astar_planner_ros.py
src/algorithms/planners/potential_planner/src/: potential_fields.cpp
src/algorithms/potential_planner/: package.xml
src/algorithms/swarm_planners/frontier_pso_exploration/: package.xml  setup.cfg  setup.py
src/algorithms/swarm_planners/frontier_pso_exploration/frontier_pso_exploration/: frontier_pso_exploration.py
src/algorithms/swarm_planners/group_exploration/: package.xml  setup.cfg  setup.py
src/algorithms/swarm_planners/group_exploration/group_exploration/: group_exploration.py
src/algorithms/swarm_planners/pso_exploration/: package.xml  setup.cfg  setup.py
src/algorithms/swarm_planners/pso_exploration/pso_exploration/: pso_exploration.py
src/algos/ackerman_regulator/: CMakeLists.txt  package.xml
src/algos/ackerman_regulator/src/: ackerman_regulator.cpp
src/algos/astar_planner/astar_planner/: astar.py  astar_planner_ros_server.py
src/algos/potential_planner/: CMakeLists.txt
src/algos/potential_planner/src/: potential_fields.cpp
src/astar_planner/: package.xml  setup.py
src/astar_planner/astar_planner/: astar_planner_ros_server.py
src/augv_launches/launch/: ackerman_reg_5_cars.launch.py
src/augv_msgs/astar_planner_msgs/: CMakeLists.txt  package.xml
src/augv_msgs/astar_planner_msgs/msg/: GlobalTrajectory.msg
src/augv_msgs/astar_planner_msgs/srv/: GetTrajectory.srv
src/augv_msgs/augv_navigation_msgs/: CMakeLists.txt  package.xml
src/augv_msgs/augv_navigation_msgs/msg/: AutopilotCommand.msg  DronePose.msg  FlightControlMode.msg  Goal.msg  GoalTrajectory.msg  Mission.msg  MissionSegment.msg  PelengatorGoal.msg  Position.msg  PsoRobotStatus.msg  RobotInfo.msg  RobotInfoArray.msg
src/helper_scripts/: create_plots.ipynb  create_sim_plots.py
src/launcher_packages/augv_launches/: package.xml  setup.cfg  setup.py
src/launcher_packages/augv_launches/launch/: basic_control.launch.py  potential_fields_5_cars.launch.py  potential_fields_params.py  tank_real.launch.py
src/launcher_packages/simulation_scenarios/: package.xml  setup.cfg  setup.py
src/launcher_packages/simulation_scenarios/launch/: grs_1_robot_map.launch.py  grs_3_robot_frontier_pso_test.launch.py  grs_3_robot_group_exploration.launch.py  grs_3_robot_map.launch.py  grs_3_robot_pso_test.launch.py
src/libs/euler_angles_lib/: CMakeLists.txt  package.xml
src/libs/euler_angles_lib/include/euler_angles_lib/: euler_angles.hpp
src/libs/euler_angles_lib/src/: euler_angles.cpp
src/libs/regulators_lib/: CMakeLists.txt  package.xml
src/libs/regulators_lib/include/regulators_lib/: regulators.hpp
src/libs/regulators_lib/src/: regulators.cpp
src/potential_planner/src/: potential_fields.cpp
src/regulators_lib/: CMakeLists.txt  package.xml
src/regulators_lib/include/regulators_lib/: regulators.hpp
src/robot_info/: package.xml  setup.py
src/robot_info/robot_info/: robot_info.py
